--- a/calc.html
+++ b/calc.html
@@ -1,18 +1,15 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+<html xmlns="http://www.w3.org/1999/xhtml" lang="en">
 <head>
 <title>RPN Calculator</title>
-<meta http-equiv="Content-Type" content="text/html" charset="utf-8">
+<meta charset="utf-8" />
+<meta http-equiv="Content-Type" content="text/html" />
 <meta name="robots" content="none" />
-<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="viewport" content="width=device-width, initial-scale=1" />
 <link rel="stylesheet"
-	href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-	<script
-		src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
-	<script
-		src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+	href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
 
-	<style>
+<style>
 h3 {
 	text-align: center;
 }
@@ -80,7 +77,7 @@ input {
 						<td><button class="btn-lg btn-default" onclick="operatorPressed('+')">+</button></td>
 					</tr>
 					<tr>
-						<td></td>
+						<td><button id="clearBtn" class="btn-lg btn-default" onclick="clearPressed()">C</button></td>
 						<td><button class="btn-lg btn-default" onclick="changeSign()">+/-</button></td>
 						<td colspan="2"><button class="btn-lg btn-success"
 								onclick="digitPressed(
@@ -91,8 +88,11 @@ input {
 		</div>
 	</div>
 
-	<script src="calc.js">
-								</script>
+  <script
+    src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
+  <script
+    src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+	<script src="calc.js"> </script>
 </body>
 
 </html>
