fixed typo in calc.html affecting int button attribute

--- a/calc.html
+++ b/calc.html
@@ -17,6 +17,7 @@ h3 {
 input {
 	inline-width: 100%;
 }
+
 </style>
 </head>
 
@@ -95,7 +96,7 @@ input {
 					<tr>
 						<td><button id="randBtn" class="btn-lg btn-default btn-block"
 								onclick="rand()">rand</button></td>
-						<td><button id="intBtn" class="btn-lg btn-default btn-black"
+						<td><button id="intBtn" class="btn-lg btn-default btn-block"
 								onclick="int()">int</button></td>
 						<td colspan="2"><button class="btn-lg btn-default btn-block"
 								onclick="randInt()">randInt</button></td>
